# root-base-backend_OLD

./: .editorconfig  .gitignore  Dockerfile  README.md  install-packages.sh  local.yml  manage.py  pyproject.toml  setup.cfg
.envs_example/.local/: .django
.envs_example/.production/: .django
compose/local/django/: Dockerfile
compose/production/postgres/: Dockerfile
config/: urls.py
config/settings/: base.py  local.py  old_settings.py
requirements/: base.txt  local.txt  requirements.txt
root/blog/: admin.py  apps.py  urls.py
root/blog/api/permissions/: categories.py  permissions.py
root/blog/api/serializers/: __init__.py  categories.py  posts.py
root/blog/api/views/: __init__.py  categories.py  posts.py
root/blog/migrations/: 0001_initial.py  0002_post_user.py
root/blog/models/: __init__.py  categories.py  posts.py
root/contrib/sites/migrations/: 0001_initial.py
root/templates/: base.html
root/users/: admin.py  apps.py  urls.py
root/users/api/permissions/: permissions.py
root/users/api/serializers/: profiles.py  users.py
root/users/api/views/: users.py
root/users/migrations/: 0001_initial.py
root/users/models/: profiles.py  users.py
