[tool.poetry]
name = "cookiecutter-django"
version = "0.1.0"
description = ""
authors = ["Rodolfo Ugalde 8a <rodolfougaldeochoa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
'''